fix: prevent attachment symlink races